--- a/content/collections/travel_soccer/2020-08-17.leeds-united-4.md
+++ b/content/collections/travel_soccer/2020-08-17.leeds-united-4.md
@@ -1,5 +1,6 @@
 ---
 id: 8fefd855-12b0-4e06-9d0f-be913865a01c
+published: false
 blueprint: travel_soccer
 title: 'Fotbollsresor Leeds United'
 author: little_admin
